tests/hevm/fail/simple/simple.act
contract A

constructor()

creates

  mapping (uint=>uint) x := []

transition f() : uint256

updates

  x := x[0 => 1]

returns

  2